# mcp_oci_opsi

./: .env.example  .env.production.example  .gitignore  AGENTS.md  ARCHITECTURE.md  AUTO_DISCOVERY_UPDATE_SUMMARY.md  CACHE_ENHANCEMENT_SUMMARY.md  CACHE_SYSTEM.md  CLAUDE_DESKTOP_SETUP.md.local  CLINE_SETUP_COMPLETE.md  CONTRIBUTING.md  DBA_DEMO_QUESTIONS.md  DEMO_CHEAT_SHEET.md  DEMO_GUIDE.md  DEMO_GUIDE_V2.md  DEMO_SCRIPT.md  DIAGNOSTIC_TOOLS_SUMMARY.md  DOCUMENTATION_INDEX.md  Dockerfile  EMDEMO_CONFIG.md.local  EM_MANAGED_IMPLEMENTATION_SUMMARY.md  ENHANCEMENT_SUMMARY.md  FASTMCP_V3_GUIDE.md  FINAL_SUMMARY.md  GITHUB_PREPARATION.md  GITIGNORE_UPDATE_SUMMARY.md  ORACLE_DATABASE_INTEGRATION.md  PROFILE_MANAGEMENT.md  PROJECT_REVIEW.md  QUICK_START.md  QUICK_START_CACHE.md  QUICK_START_ENHANCED_CACHE.md  README.md  README_UPDATED.md  SECURITY.md  SESSION_SUMMARY.md  SETUP.md  SKILLS_GUIDE.md  STANDALONE_USAGE.md  TENANCY_REVIEW_GUIDE.md  (+59 more)
archive/: AUTO_DISCOVERY_UPDATE_SUMMARY.md  CLINE_SETUP_COMPLETE.md  MCP_CLEANUP_SUMMARY.md  README_UPDATED.md  ROADMAP_STATUS.md  V2.0_RELEASE_SUMMARY.md  V2_API_AVAILABILITY_FINDINGS.md
auth/: hybrid_auth.py  oci_oauth.py
auth_bridge/: __init__.py  constants.py  oca_auth.py  token_manager.py
config/: __init__.py
docs/: ARCHITECTURE.md  OCI_MCP_SERVER_STANDARD.md  OCI_VM_DEPLOYMENT.md
mcp_oci_opsi/: __init__.py  __main__.py  cache.py  cache_enhanced.py  config.py  config_enhanced.py  main.py  main_v3.py  oci_clients.py  oci_clients_enhanced.py  skills_loader.py  tools_cache.py  tools_database_discovery.py  tools_dbmanagement.py  tools_dbmanagement_sql_plans.py  tools_opsi.py  tools_opsi_extended.py  tools_opsi_resource_stats.py  tools_oracle_database.py  visualization.py
scripts/: README.md  __init__.py  enhanced_database_discovery.py  live_test_macs_databases.py  quick_cache_build.sh  quick_enhanced_cache_build.sh  refresh_all_profiles.sh  setup_and_build.sh  tenancy_review.py  validate_all_apis.py  verify_database_insight.py
servers/: admin_server.py  cache_server.py  dbm_server.py  opsi_server.py
skills/: __init__.py  adapters.py  cost_optimization.py  database_discovery.py  demo_opsi_features.py  demo_v2_features.py  diagnose_permissions.py  diagnose_sql_stats.py  performance_analysis.py
test_scripts/: config_base.py  config_enhanced.py  debug_ocid_region.py  find_idcs_domain.py  list_all_databases.py  logging_config.py  test_agent_detection.py  test_all_mcp_tools.py  test_auth_with_domains.py  test_em_managed_fallback.py  test_idcs_endpoint.py  test_macs_databases.py  test_macs_direct.py  test_new_apis.py  test_oauth_endpoints.py  test_regional_fix.py
tools/: __init__.py  config_enhanced.py  oci_clients.py  oci_clients_enhanced.py  tools_cache.py  tools_cache_enhanced.py  tools_database_discovery.py  tools_database_registration.py  (+13 more)
(+34 files in other folders)
